* src/Makefile.am (ratpoison_SOURCES): add frame.c and frame.h
* src/frame.h (frame_left): new prototype
(frame_top): likewise
(frame_right): likewise
(frame_bottom): likewise
(frame_width): likewise
(frame_height): likewise
(frame_resize_left): likewise
(frame_resize_right): likewise
(frame_resize_up): likewise
(frame_resize_down): likewise
(frame_move_left): likewise
(frame_move_right): likewise
(frame_move_up): likewise
(frame_move_down): likewise

* src/frame.c (frame_left): new function
(frame_top): likewise
(frame_right): likewise
(frame_bottom): likewise
(frame_width): likewise
(frame_height): likewise
(frame_resize_left): likewise
(frame_resize_right): likewise
(frame_resize_up): likewise
(frame_resize_down): likewise
(frame_move_left): likewise
(frame_move_right): likewise
(frame_move_up): likewise
(frame_move_down): likewise

* src/split.c (resize_frame): new function
(resize_frame_right): likewise
(resize_frame_left): likewise
(resize_frame_top): likewise
(resize_frame_bottom): likewise
(resize_frame_horizontally): use resize_frame_right and
resize_frame_left to do the resizing.
(resize_frame_vertically):  use resize_frame_top and
resize_frame_bottom to do the resizing.

* src/ratpoison.h (PRINT_ERROR): flush stdout
(PRINT_DEBUG): likewise
include frame.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.12 2003/03/07 04:42:15 sabetts Exp $
+## $Id: Makefile.am,v 1.13 2003/03/07 11:43:26 sabetts Exp $
 
 bin_PROGRAMS		= ratpoison
 
@@ -31,6 +31,8 @@ ratpoison_SOURCES	= actions.c		\
 			data.h			\
 			events.c		\
 			events.h		\
+			frame.c			\
+			frame.h			\
 			getopt.c		\
 			getopt.h		\
 			getopt1.c		\
