--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.33 2003/02/23 01:40:42 sabetts Exp $
+dnl $Id: configure.in,v 1.34 2003/04/09 23:12:12 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.2.0-cvs)
@@ -41,7 +41,7 @@ AC_ARG_ENABLE(debug,
 
 AC_ARG_WITH(xterm, [ --with-xterm=PROG        set the x terminal emulator used by ratpoison ],
 term_prog=$withval, term_prog="xterm")
-AC_DEFINE_UNQUOTED(TERM_PROG,"$term_prog")
+AC_DEFINE_UNQUOTED(TERM_PROG, "$term_prog", X terminal emulator to use)
 
 dnl Checks for programs.
 AC_CHECK_TOOL(CC, gcc)
