--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.15 2003/04/08 00:00:49 sabetts Exp $
+## $Id: Makefile.am,v 1.16 2003/05/16 23:25:07 sabetts Exp $
 
 bin_PROGRAMS		= ratpoison
 
@@ -36,6 +36,10 @@ ratpoison_SOURCES	= actions.c		\
 			getopt.c		\
 			getopt.h		\
 			getopt1.c		\
+			globals.h		\
+			globals.c		\
+			group.h			\
+			group.c			\
 			input.c			\
 			input.h			\
 			linkedlist.h		\
