* src/linkedlist.h: Move all C function to linkedlist.c
	* src/window.c (find_window): add debugging output describing
	which window list the window was found in.

	* src/group.c (group_new): assign the group's number the number
	passed as an argument.

	* src/events.c (destroy_window): withdraw iconified and normal
	windows before unmanaging them.
	(handle_signals): delete the node from the list before freeing it.

	* src/bar.h (message): remove define.
	(marked_wrapped_message): remove prototype
	(message): new prototype

	* src/bar.c (message): new function
	(marked_wrapped_message): renamed to marked_message. remove
	marked_message.

--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.35 2003/05/17 10:26:19 sabetts Exp $
+dnl $Id: configure.in,v 1.36 2003/05/20 07:20:14 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.3.0-cvs)
@@ -68,6 +68,9 @@ CFLAGS="$CFLAGS $X_CFLAGS"
 
 AC_CHECK_LIB(X11, XOpenDisplay,,
 	AC_MSG_ERROR([*** Can't find libX11]))
+
+dnl Check for electric fence library
+dnl AC_CHECK_LIB(efence,malloc,,)
 
 dnl Checks for header files.
 AC_HEADER_STDC
