* src/editor.c (saved_command): new local global (edit_binding): new typedef (edit_binding): new struct (edit_bindings): new local global (input_line_new): new function (input_line_free): likewise (execute_edit_action): likewise (editor_forward_char): likewise (editor_backward_char): likewise (editor_forward_word): likewise (editor_backward_word): likewise (editor_beginning_of_line): likewise (editor_end_of_line): likewise (editor_delete_char): likewise (editor_backward_delete_char): likewise (editor_kill_word): likewise (editor_backward_kill_word): likewise (editor_kill_line): likewise (editor_backward_kill_line): likewise (editor_history_previous): likewise (editor_history_next): likewise (editor_abort): likewise (editor_no_action): likewise (editor_insert): likewise (editor_enter): likewise (paste_cut_buffer): likewise (paste_primary_selection): likewise (editor_paste_selection): likewise (editor_complete): likewise (editor_forward_char): new prototype (editor_backward_char): likewise (editor_forward_word): likewise (editor_backward_word): likewise (editor_beginning_of_line): likewise (editor_end_of_line): likewise (editor_delete_char): likewise (editor_backward_delete_char): likewise (editor_kill_word): likewise (editor_backward_kill_word): likewise (editor_kill_line): likewise (editor_paste_selection): likewise (editor_abort): likewise (editor_no_action): likewise (editor_enter): likewise (editor_history_previous): likewise (editor_history_next): likewise (editor_complete): likewise (editor_backward_kill_line): likewise
* src/sbuf.h (sbuf): add node field.

* src/main.c (xrealloc): don't print debugger output
(init_defaults): init history_size
(main): initialize rp_selection
(main): load history
(clean_up): save history

* src/linkedlist.h (list_first): new macro

* src/input.h (free_history): remove prototype
(ring_bell): new function

* src/input.c: include unistd.h
(input_history): remove
(input_num_history_entries): likewise
(update_input_window): remove pr

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.17 2003/05/20 07:20:15 sabetts Exp $
+## $Id: Makefile.am,v 1.18 2003/05/27 07:51:06 sabetts Exp $
 
 bin_PROGRAMS		= ratpoison
 
@@ -25,10 +25,14 @@ ratpoison_SOURCES	= actions.c		\
 			actions.h		\
 			bar.c			\
 			bar.h			\
+			completions.c		\
+			completions.h		\
 			communications.c	\
 			communications.h	\
 			conf.h			\
 			data.h			\
+			editor.c		\
+			editor.h		\
 			events.c		\
 			events.h		\
 			frame.c			\
@@ -40,6 +44,8 @@ ratpoison_SOURCES	= actions.c		\
 			globals.c		\
 			group.h			\
 			group.c			\
+			history.h		\
+			history.c		\
 			input.c			\
 			input.h			\
 			linkedlist.h		\
