--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.36 2003/05/20 07:20:14 sabetts Exp $
+dnl $Id: configure.in,v 1.37 2003/05/27 07:51:03 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.3.0-cvs)
@@ -62,6 +62,17 @@ AC_PATH_XTRA
 if test "x$no_x" = "xyes"; then
 	AC_MSG_ERROR([*** Can't find X11 headers and libs])
 fi
+
+dnl Just a hack ....
+AC_CHECK_LIB(history, add_history, [ AC_CHECK_HEADER(readline/history.h, HISTORY="yes")])
+
+
+if test "x$HISTORY" = "xyes"; then
+	LIBS="$LIBS -lhistory"
+else
+	AC_MSG_ERROR([*** Can't find History headers and libs])
+fi
+
 
 LDFLAGS="$LDFLAGS $X_LDFLAGS $X_LIBS $X_EXTRA_LIBS"
 CFLAGS="$CFLAGS $X_CFLAGS"
