* src/window.c (set_active_window): run the switch window hook.
* src/split.c (set_active_frame): run the switch frame hook.

* src/ratpoison.h: include hook.h

* src/group.h (set_current_group): new prototype

* src/group.c (set_current_group): new function

* src/globals.h (rp_prefix_hook): new extern
(rp_switch_win_hook): likewise
(rp_switch_frame_hook): likewise
(rp_switch_group_hook): likewise
(rp_hook_db): likewise

* src/globals.c (rp_prefix_hook): new hook
(rp_switch_win_hook): likewise
(rp_switch_frame_hook): likewise
(rp_switch_group_hook): likewise
(rp_hook_db): new global

* src/events.c (handle_key): call the prefix hook.

* src/data.h (struct rp_hook_db_entry): new struct

* src/actions.h (cmd_addhook): new prototype
(cmd_remhook): likewise

* src/actions.c (user_commands): add commands addhook and remhook.
(cmd_windows): show the window bar no matter what if the bar
timeout is > 0.
(cmd_gnext): call set_current_group
(cmd_gprev): likewise
(cmd_gnew): likewise
(cmd_gselect): likewise
(cmd_addhook): new function
(cmd_remhook): likewise

* src/Makefile.am (ratpoison_SOURCES): add hook.c and hook.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.18 2003/05/27 07:51:06 sabetts Exp $
+## $Id: Makefile.am,v 1.19 2003/07/17 05:41:41 sabetts Exp $
 
 bin_PROGRAMS		= ratpoison
 
@@ -46,6 +46,8 @@ ratpoison_SOURCES	= actions.c		\
 			group.c			\
 			history.h		\
 			history.c		\
+			hook.c			\
+			hook.h			\
 			input.c			\
 			input.h			\
 			linkedlist.h		\
