*** empty log message ***

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -1,4 +1,4 @@
 bin_SCRIPTS = rpws
 
-pkgdata_DATA = ratpoison.el split.sh genrpbindings
-EXTRA_DIST    = ratpoison.el split.sh genrpbindings
+pkgdata_DATA = ratpoison.el split.sh genrpbindings rpws
+EXTRA_DIST    = ratpoison.el split.sh genrpbindings rpws
