--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.38 2003/05/31 09:14:27 sabetts Exp $
+dnl $Id: configure.in,v 1.39 2003/11/03 03:17:59 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.3.0-cvs)
@@ -63,16 +63,23 @@ if test "x$no_x" = "xyes"; then
 	AC_MSG_ERROR([*** Can't find X11 headers and libs])
 fi
 
-dnl Just a hack ....
-AC_CHECK_LIB(history, add_history, [ AC_CHECK_HEADER(readline/history.h, HISTORY="yes")])
 
+dnl Those who do not learn the lessons of history
+dnl are doomed to delete it...  yuk yuk.  --ttn
+AC_ARG_ENABLE(history,
+  [  --disable-history       ignore libhistory (default: use it)],
+  [ if test x${enableval} = xyes ; then
+        check_for_libhistory=yes
+    else
+        check_for_libhistory=no
+    fi],[check_for_libhistory=yes])
 
-if test "x$HISTORY" = "xyes"; then
-	LIBS="$LIBS -lhistory"
-else
-	AC_MSG_ERROR([*** Can't find History headers and libs])
+if test x$check_for_libhistory = xyes ; then
+  AC_CHECK_HEADERS([readline/history.h])
+  AC_CHECK_LIB(history, add_history,
+    LIBS="$LIBS -lhistory",
+    AC_MSG_ERROR([*** Can't find History headers and libs]))
 fi
-
 
 LDFLAGS="$LDFLAGS $X_LDFLAGS $X_LIBS $X_EXTRA_LIBS"
 CFLAGS="$CFLAGS $X_CFLAGS"
