(pkgdata_DATA): add rpshowall.sh (EXTRA_DIST): likewise

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -1,4 +1,4 @@
 bin_SCRIPTS = rpws
 
-pkgdata_DATA = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl
-EXTRA_DIST    = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl
+pkgdata_DATA = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl rpshowall.sh
+EXTRA_DIST    = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl rpshowall.sh
