--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.39 2003/11/03 03:17:59 sabetts Exp $
+dnl $Id: configure.in,v 1.40 2004/02/27 08:28:16 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.3.0-cvs)
@@ -86,6 +86,11 @@ CFLAGS="$CFLAGS $X_CFLAGS"
 
 AC_CHECK_LIB(X11, XOpenDisplay,,
 	AC_MSG_ERROR([*** Can't find libX11]))
+
+AC_CHECK_HEADERS([X11/extensions/Xinerama.h])
+AC_CHECK_LIB(Xext, XMissingExtension, [LIBS="-lXext $LIBS"],, $CFLAGS $LDFLAGS)
+AC_CHECK_LIB(Xinerama, XineramaQueryScreens, [LIBS="-lXinerama $LIBS"],, $CFLAGS $LDFLAGS)
+
 
 dnl Check for electric fence library
 dnl AC_CHECK_LIB(efence,malloc,,)
