--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.43 2004/06/14 05:25:50 sabetts Exp $
+dnl $Id: configure.in,v 1.44 2004/09/29 15:33:14 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.3.1-cvs)
@@ -75,10 +75,12 @@ AC_ARG_ENABLE(history,
     fi],[check_for_libhistory=yes])
 
 if test x$check_for_libhistory = xyes ; then
-  AC_CHECK_HEADERS([readline/history.h])
-  AC_CHECK_LIB(history, add_history,
-    LIBS="$LIBS -lhistory",
-    AC_MSG_ERROR([*** Can't find History headers and libs]))
+  AC_CHECK_HEADERS([readline/history.h],
+    AC_CHECK_LIB(history, add_history,
+      [LIBS="$LIBS -lhistory"
+       AC_DEFINE_UNQUOTED(HAVE_HISTORY, 1, Define this to enable history)],
+      AC_MSG_WARN([*** Can't find History lib. Install readline dev libs for history.])),
+    AC_MSG_WARN([*** Can't find History header. Install readline dev libs for history.]))
 fi
 
 LDFLAGS="$LDFLAGS $X_LDFLAGS $X_LIBS $X_EXTRA_LIBS"
