--- a/configure.in
+++ b/configure.in
@@ -17,10 +17,10 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.44 2004/09/29 15:33:14 sabetts Exp $
+dnl $Id: configure.in,v 1.45 2004/10/05 16:44:59 sabetts Exp $
 
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(ratpoison, 1.3.1-cvs)
+AM_INIT_AUTOMAKE(ratpoison, 1.3.1)
 
 AM_CONFIG_HEADER(src/config.h)
 
