--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## Copyright (C) 2000-2004 Shawn Betts <sabetts@vcn.bc.ca>
+## Copyright (C) 2000, 2001, 2002, 2003, 2004 Shawn Betts <sabetts@vcn.bc.ca>
 ##
 ## This file is part of ratpoison.
 ##
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.10 2004/12/02 00:22:38 sabetts Exp $
+## $Id: Makefile.am,v 1.11 2004/12/03 01:20:56 sabetts Exp $
 
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
