--- a/debian/control
+++ b/debian/control
@@ -1,23 +1,27 @@
 Source: ratpoison
 Section: x11
 Priority: extra
-Maintainer: Gergely Nagy and Jonathan Walther <algernon-krooger@klecker.debian.org>
-Build-Depends: debhelper (>= 2.0.89), xlibs-dev | xlib6g-dev
-Standards-Version: 3.5.6
-Uploaders: Gergely Nagy <algernon@debian.org>, Jonathan Walther <krooger@debian.org>
+Maintainer: Bernhard R. Link <brlink@debian.org>
+Build-Depends: debhelper (>= 4.0.0), libx11-dev, libxext-dev, x-dev, libxinerama-dev | xlibs-static-dev (<< 1:7.0), libxtst-dev, libreadline5-dev | libreadline4-dev
+Standards-Version: 3.7.2
 
 Package: ratpoison
 Architecture: any
 Depends: ${shlibs:Depends}
-Recommends: xvt | x-terminal-emulator, ratmenu
+Recommends: 9menu (>= 1.6), menu, rxvt | x-terminal-emulator
+Suggests: xbindkeys, xclip
 Provides: x-window-manager
-Description: Simple window manager with no fat library dependencies.
- ratpoison is a simple Window Manager with no fat library
- dependencies, no fancy graphics, no window decorations,
- and no flashy wank. It is largely modelled after GNU
- Screen which has done wonders in virtual terminal market.
+Description: keyboard-only window manager
+ ratpoison is a simple window manager with no fancy graphics, 
+ no window decorations, and no rodent dependence. 
+ It is largely modelled after GNU Screen.
+ .
+ The screen can be split into non-overlapping frames. All
+ windows are kept maximized inside their frames to take
+ full advantage of your precious screen real estate.
  .
  All interaction with the window manager is done through
- keystrokes. ratpoison has a prefix map to minimize the
- key clobbering that cripples EMACS and other quality
- pieces of software.
+ keystrokes. ratpoison has a prefix map to minimize
+ key clobbering.
+ .
+ Homepage: http://www.nongnu.org/ratpoison
