--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -20,3 +20,4 @@
 info_TEXINFOS = ratpoison.texi
 man_MANS      = ratpoison.1
 EXTRA_DIST    = $(man_MANS) sample.ratpoisonrc ipaq.ratpoisonrc
+MAINTAINERCLEANFILES = Makefile.in texinfo.tex
