--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,9 +17,10 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.23 2006/03/15 05:43:38 sabetts Exp $
+## $Id: Makefile.am,v 1.24 2006/11/21 17:03:31 brl Exp $
 
 bin_PROGRAMS		= ratpoison
+MAINTAINERCLEANFILES = Makefile.in config.h.in
 
 ratpoison_SOURCES	= actions.c		\
 			actions.h		\
