--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -21,3 +21,4 @@ bin_SCRIPTS = rpws
 
 pkgdata_DATA = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl rpshowall.sh unrat.c sloppy.c
 EXTRA_DIST    = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl rpshowall.sh unrat.c sloppy.c
+MAINTAINERCLEANFILES = Makefile.in
