tell automake to include fdl.texi into dist tar

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -19,5 +19,5 @@
 
 info_TEXINFOS = ratpoison.texi
 man_MANS      = ratpoison.1
-EXTRA_DIST    = $(man_MANS) sample.ratpoisonrc ipaq.ratpoisonrc
+EXTRA_DIST    = $(man_MANS) sample.ratpoisonrc ipaq.ratpoisonrc fdl.texi
 MAINTAINERCLEANFILES = Makefile.in texinfo.tex
