--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ratpoison
 Section: x11
 Priority: extra
 Maintainer: Bernhard R. Link <brlink@debian.org>
-Build-Depends: debhelper (>= 4.0.0), libx11-dev, libxext-dev, x11proto-core-dev | x-dev, libxinerama-dev | xlibs-static-dev (<< 1:7.0), libxtst-dev, libreadline5-dev | libreadline4-dev
+Build-Depends: debhelper (>= 4.0.0), libx11-dev, libxext-dev, x11proto-core-dev, libxinerama-dev, libxtst-dev, libreadline5-dev, perl
 Standards-Version: 3.7.2
 
 Package: ratpoison
@@ -12,8 +12,8 @@ Recommends: 9menu (>= 1.6), menu, rxvt | x-terminal-emulator
 Suggests: xbindkeys, xclip
 Provides: x-window-manager
 Description: keyboard-only window manager
- ratpoison is a simple window manager with no fancy graphics, 
- no window decorations, and no rodent dependence. 
+ ratpoison is a simple window manager with no fancy graphics,
+ no window decorations, and no rodent dependence.
  It is largely modelled after GNU Screen.
  .
  The screen can be split into non-overlapping frames. All
