--- a/debian/rules
+++ b/debian/rules
@@ -13,11 +13,11 @@ DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 CFLAGS = -Wall -g
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
-	DEPENDENCIES = 
+	DEPENDENCIES =
 else
 	CFLAGS += -O2
 ifneq (,$(findstring ratpoison:gendeps,$(DEB_BUILD_OPTIONS)))
-	DEPENDENCIES = 
+	DEPENDENCIES =
 else
 	DEPENDENCIES = --disable-dependency-tracking
 endif
@@ -38,64 +38,73 @@ config.status: configure
 	    --x-includes="" --x-libraries="" \
 	    CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,syms"
 
-build: build-stamp
-
-build-stamp: config.status
+build-arch: build-arch-stamp
+build-arch-stamp: config.status
 	dh_testdir
 
 	$(MAKE)
+	# bindings for the different languages
 	cd contrib && ./genrpbindings
-	touch build-stamp
+	# manpage for rpws
+	pod2man contrib/rpws rpws.1
+	touch build-arch-stamp
+
+build-indep: build-indep-stamp
+build-indep-stamp:
+	touch build-indep-stamp
+build: build-arch build-indep
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp 
+	rm -f build-arch-stamp build-indep-stamp
 
 	if [ -e config.status ] ; then $(MAKE) distclean ; fi
 	-rm -f contrib/Ratpoison.pm contrib/ratpoison-cmd.el contrib/ratpoison.lisp contrib/ratpoison.py contrib/ratpoison.rb
+	-rm -f rpws.1
 ifneq "$(wildcard /usr/share/misc/config.sub)" ""
 	cp -f /usr/share/misc/config.sub config.sub
 endif
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 	cp -f /usr/share/misc/config.guess config.guess
 endif
-	dh_clean 
+	dh_clean
 
-install: build
+install: install-arch install-indep
+
+install-indep: build-indep
+
+install-arch: build-arch
 	dh_testdir
 	dh_testroot
-	dh_clean -k 
+	dh_clean -k
 	dh_installdirs
 
 	$(MAKE) install pkgdatadir=/usr/share/doc/ratpoison/examples DESTDIR=$(CURDIR)/debian/ratpoison
-	rm $(CURDIR)/debian/ratpoison/usr/bin/rpws
-	-rm -r $(CURDIR)/debian/ratpoison/usr/share/ratpoison
 	# Those are installed to different places already by dh_*
 	rm $(CURDIR)/debian/ratpoison/usr/share/doc/ratpoison/COPYING
 	rm $(CURDIR)/debian/ratpoison/usr/share/doc/ratpoison/ChangeLog
+	# not needed two times:
+	rm $(CURDIR)/debian/ratpoison/usr/share/doc/ratpoison/examples/rpws
 	# The menu command:
-	install -m 0755 debian/callmenu.sh $(CURDIR)/debian/ratpoison/etc/X11/ratpoison/ratpoisonmenu
-	# bindings for the different languages:
-	install -m 0644 $(CURDIR)/contrib/Ratpoison.pm $(CURDIR)/debian/ratpoison/usr/share/perl5/
-	install -m 0644 $(CURDIR)/contrib/ratpoison.rb $(CURDIR)/debian/ratpoison/usr/lib/ruby/1.8/
-	install -m 0644 $(CURDIR)/contrib/ratpoison.py $(CURDIR)/debian/ratpoison/usr/share/python-support/ratpoison/
-	install -m 0644 $(CURDIR)/contrib/ratpoison-cmd.el $(CURDIR)/debian/ratpoison/usr/share/emacs/site-lisp/ratpoison/
+	install -D -m 0755 debian/callmenu.sh $(CURDIR)/debian/ratpoison/etc/X11/ratpoison/ratpoisonmenu
 
 # Build architecture-independent files here.
-binary-indep: build install
+binary-indep: build-indep install-indep
 # We have nothing to do
 
 # Build architecture-dependent files here.
-binary-arch: build install
+binary-arch: build-arch install-arch
 	dh_testdir
 	dh_testroot
+	dh_install
 	dh_installchangelogs ChangeLog
 	dh_installdocs
 	dh_installexamples
 	dh_installemacsen
 	dh_installmenu
 	dh_installinfo doc/ratpoison.info
+	dh_installman rpws.1
 	dh_link
 	dh_strip
 	dh_compress
@@ -141,7 +150,7 @@ maintainer-cvs:
 	./debian/rules maintainer-ready RATPOISON_VERSION="$(RATPOISON_CVSVERSION)"
 	cd "../ratpoison-$(RATPOISON_CVSVERSION)" && ./debian/rules maintainer-clean
 	cd "../ratpoison-$(RATPOISON_CVSVERSION)" && dch -v "$(RATPOISON_CVSVERSION)-0" -D "LOCAL"
-	
+
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install get-orig-source make-orig-source-working
