--- a/configure.in
+++ b/configure.in
@@ -20,7 +20,7 @@ dnl
 dnl $Id: configure.in,v 1.54 2006/12/19 22:13:07 sabetts Exp $
 
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(ratpoison, 1.4.2-CVS)
+AM_INIT_AUTOMAKE(ratpoison, 1.4.3-GIT)
 
 AM_MAINTAINER_MODE
 
