--- a/configure.in
+++ b/configure.in
@@ -95,21 +95,25 @@ fi
 
 dnl Those who do not learn the lessons of history
 dnl are doomed to delete it...  yuk yuk.  --ttn
-AC_ARG_ENABLE(history,AC_HELP_STRING([--disable-history],[ignore libhistory (default: use it)]),
+AC_ARG_ENABLE(history,AC_HELP_STRING([--disable-history],[ignore libhistory (default: use it if available, only used for ! expansion)]),
   [ if test x${enableval} = xyes ; then
         check_for_libhistory=yes
     else
         check_for_libhistory=no
-    fi],[check_for_libhistory=yes])
+    fi],[check_for_libhistory=default])
 
 HISTORY_LIBS=""
-if test x$check_for_libhistory = xyes ; then
+if test x$check_for_libhistory != xno ; then
   AC_CHECK_HEADERS([readline/history.h],
     AC_CHECK_LIB(history, add_history,
       [HISTORY_LIBS="-lhistory"
        AC_DEFINE_UNQUOTED(HAVE_HISTORY, 1, Define this to enable history)],
-      AC_MSG_WARN([*** Can't find History lib. Install readline dev libs for history.])),
-    AC_MSG_WARN([*** Can't find History header. Install readline dev libs for history.]))
+      if test x$check_for_libhistory = xyes ; then
+      AC_MSG_ERROR([*** Can't find History lib. Install readline dev libs for history expansion.])
+      fi),
+    if test x$check_for_libhistory = xyes ; then
+    AC_MSG_ERROR([*** Can't find History header. Install readline dev libs for history expansion.])
+    fi)
 fi
 AC_SUBST(HISTORY_LIBS)
 
