--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *~
+/build-aux/
+/m4/
 configure
 Makefile
 Makefile.in
@@ -6,11 +8,6 @@ aclocal.m4
 autom4te.cache
 config.status
 config.log
-config.guess
-config.sub
-depcomp
-install-sh
-missing
 ratpoison-*.tar.gz
 ratpoison-*.tar.gz.sig
 TAGS
