--- a/configure.in
+++ b/configure.in
@@ -28,11 +28,11 @@ AM_INIT_AUTOMAKE([-Wall -Werror gnu])
 
 AM_MAINTAINER_MODE
 
-AM_CONFIG_HEADER(src/config.h)
+AC_CONFIG_HEADER(src/config.h)
 
 dnl by default turn off debugging
 AC_MSG_CHECKING(whether to enable debugging)
-AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug],[build with extra debugging messages]),
+AC_ARG_ENABLE(debug,AS_HELP_STRING([--enable-debug],[build with extra debugging messages]),
 	[if test "x$enableval" != "xno"; then
 		AC_DEFINE_UNQUOTED(DEBUG, 1, Define this to enable debugging messages)
 		AC_MSG_RESULT(yes)
@@ -41,13 +41,13 @@ AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug],[build with extra debugging 
 		AC_MSG_RESULT(no)
 	fi],[AC_MSG_RESULT(no)])
 
-AC_ARG_WITH(xterm,AC_HELP_STRING([--with-xterm=PROG],[set the x terminal emulator used by ratpoison]),
+AC_ARG_WITH(xterm,AS_HELP_STRING([--with-xterm=PROG],[set the x terminal emulator used by ratpoison]),
 term_prog=$withval, term_prog="xterm")
 AC_DEFINE_UNQUOTED(TERM_PROG, "$term_prog", X terminal emulator to use)
 
 XFT_CFLAGS=
 XFT_LIBS=
-AC_ARG_WITH(xft,AC_HELP_STRING([--without-xft],[Don't use the Xft library even if available]),
+AC_ARG_WITH(xft,AS_HELP_STRING([--without-xft],[Don't use the Xft library even if available]),
                 xft=$withval, xft=default)
 if test "x$xft" != "xno"; then
     dnl Configure Xft.
@@ -99,7 +99,7 @@ fi
 
 dnl Those who do not learn the lessons of history
 dnl are doomed to delete it...  yuk yuk.  --ttn
-AC_ARG_ENABLE(history,AC_HELP_STRING([--disable-history],[ignore libhistory (default: use it if available, only used for ! expansion)]),
+AC_ARG_ENABLE(history,AS_HELP_STRING([--disable-history],[ignore libhistory (default: use it if available, only used for ! expansion)]),
   [ if test x${enableval} = xyes ; then
         check_for_libhistory=yes
     else
