--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ config.status
 config.log
 ratpoison-*.tar.gz
 ratpoison-*.tar.gz.sig
+ratpoison-*.tar.xz
+ratpoison-*.tar.xz.sig
 TAGS
 /doc/version.texi
 /doc/stamp-vti
